@@ -141,6 +141,7 @@ extern int mkdirtree(
     mode_t mode);
 
 extern int TTmpDirName(job*, char *);
+extern int TMOMJobGetStartInfo(job *, pjobexec_t **) ;
 
 #endif /* HAVE_WORDEXP */
 
@@ -1117,6 +1118,7 @@ void req_deletejob(
 
   {
   job *pjob;
+  pjobexec_t *TJE = NULL;
 
   pjob = find_job(preq->rq_ind.rq_delete.rq_objname);
 
@@ -1129,6 +1131,19 @@ void req_deletejob(
         PBS_EVENTCLASS_JOB,
         pjob->ji_qs.ji_jobid,
         "deleting job");
+      }
+
+    /*
+     * We need to clear out the TJE starter slot if this job is in it.  This
+     * can occur if we qdel the job while the prologue is running.  If we
+     * don't remove ourself here then the TJE slot may remain with data that is
+     * no longer valid, yet we will reuse the slot since it only matches on the
+     * address of the pjob not on a jobid.  This can lead to unexpected crashes.
+     */
+
+    if (TMOMJobGetStartInfo(pjob, &TJE) == SUCCESS)
+      {
+      memset(TJE, 0, sizeof(pjobexec_t));
       }
 
     /* assume success? */
